# multi-quickpiv-gui

./: .gitignore  README.md  environment-windows-lock.yml  environment.yml  pyproject.toml  requirements.txt
julia_env/: Manifest.toml  Project.toml
scripts/: bootstrap_scaffold.py  run_smoke_tests.py  smoke_test_3d_batch_export.py  smoke_test_3d_bridge.py  smoke_test_3d_median_despike.py  smoke_test_3d_tiff_sequence_loading.py  smoke_test_params_mapping.py  smoke_test_pipeline.py
src/multi_quickpiv_gui/: __init__.py
src/multi_quickpiv_gui/backend/: core.py  export.py  io.py  julia_bridge.py
src/multi_quickpiv_gui/gui/: app.py  dialogs.py  params_form.py  preview.py
src/multi_quickpiv_gui/postprocessing/: __init__.py  pipeline.py  spatial.py
src/multi_quickpiv_gui/runtime/: batch.py  worker.py
src/multi_quickpiv_gui/workflow/: params.py  pipeline.py  project.py
