[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-quickpiv-gui"
version = "0.1.0"
description = "Python GUI for the Julia multi_quickPIV backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.2",
    "julia==0.6.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
quickpiv-gui = "multi_quickpiv_gui.gui.app:main"
